# base-cpp-cmake-doctest-sfml-imgui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: git_update_submodule.cmake
include/_sample/: _sample.h
src/: CMakeLists.txt
src/_sample/: _sample.cpp
tests/: CMakeLists.txt  test-main.cpp
